FIxed readability of pane mentioned above

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -52,8 +52,8 @@
   left: -10px;
   bottom: 0;
   right: 0;
-  box-shadow: inset 0 0 0 350px rgba(50, 50, 50, 0.2);
-  filter: blur(20px);
+  box-shadow: inset 0 0 0 350px rgba(50, 50, 50, 0.5);
+  filter: blur(10px);
 }
 
 .content {
